--- a/configs/peku/e2e_3d_car_101_FPN_triple_head.yaml
+++ b/configs/peku/e2e_3d_car_101_FPN_triple_head.yaml
@@ -1,7 +1,7 @@
 MODEL:
   META_ARCHITECTURE: "GeneralizedRCNN"
-  #WEIGHT: "/media/SSD_1TB/ApolloScape/6DVNET_experiments/e2e_3d_car_101_FPN_triple_head/May31-05-30_n606_step/model_final.pth"
-  WEIGHT: "catalog://ImageNetPretrained/MSRA/R-101"
+  WEIGHT: "/home/wit/6dvnet/output/e2e_3d_car_101_FPN_triple_head/Dec03-05-58_instance-1_step/model_0006000.pth"
+#  WEIGHT: "catalog://ImageNetPretrained/MSRA/R-101"
   BACKBONE:
     CONV_BODY: "R-101-FPN"
     OUT_CHANNELS: 256
@@ -29,7 +29,6 @@ MODEL:
     POOLER_SAMPLING_RATIO: 2
     RESOLUTION: 14
     SHARE_BOX_FEATURE_EXTRACTOR: False
-
   ROI_CAR_CLS_ROT_HEAD:
     FEATURE_EXTRACTOR: "FPN2MLP2FeatureExtractor"
     POOLER_RESOLUTION: 7
@@ -51,7 +50,6 @@ MODEL:
     SUBCAT_LOSS_BETA: 0.1 # Because we multiply the ce_weight
     ROT_LOSS_BETA: 1.0
     ROT_DIFF_DEGREE: True
-
   TRANS_HEAD:
     FEATURE_EXTRACTOR: "MLPFeatureExtractor"
     PREDICTOR: "MLPCONCATPredictor"
@@ -62,24 +60,29 @@ MODEL:
     TRANS_HUBER_THRESHOLD: 2.8
     CAMERA_INTRINSIC: (2304.54786556982, 2305.875668062, 1686.23787612802, 1354.98486439791)
     TRANS_LOSS_BETA: 0.05
-
   MASK_ON: True
   CAR_CLS_HEAD_ON: True
   TRANS_HEAD_ON: True
 
 DATASETS:
   TRAIN: ("peku_3d_car_train", "peku_3d_car_val")
-  TEST: ("peku_3d_car_val", "peku_3d_car_test",)
+#  TEST: ("peku_3d_car_val", "peku_3d_car_test")
+  TEST: ("peku_3d_car_test",)
 
 INPUT:
   BOTTOM_HALF: True
-  MIN_SIZE_TRAIN_RANGE: (700, 900)  # (1200, 2710)  2710 is TOO BIG! # if g half is true
+#  MIN_SIZE_TRAIN_RANGE: (700, 900)  # (1200, 2710)  2710 is TOO BIG! # if g half is true
+#  MAX_SIZE_TRAIN: 3384
+  MIN_SIZE_TRAIN: 900
   MAX_SIZE_TRAIN: 3384
-  MIN_SIZE_TEST: 2710
-  MAX_SIZE_TEST : 3384
+  MIN_SIZE_TEST: 900
+  MAX_SIZE_TEST: 3384
+#  PIXEL_MEAN: [0.40384353, 0.45469216, 0.48145765]
+#  TO_BGR255: False
 
 DATALOADER:
   SIZE_DIVISIBILITY: 32
+  NUM_WORKERS: 8
 
 SOLVER:
   WEIGHT_DECAY: 0.0001
@@ -87,17 +90,17 @@ SOLVER:
   MAX_ITER: 100000
   #https://github.com/facebookresearch/Detectron/blob/master/configs/getting_started/tutorial_1gpu_e2e_faster_rcnn_R-50-FPN.yaml#L14-L30
   IMS_PER_BATCH: 3
-  BASE_LR:   0.005
+  BASE_LR: 0.005
   KEEP_LR: True
-  CHECKPOINT_PERIOD : 10000
+  CHECKPOINT_PERIOD: 1000
   UNFREEZE_CONV_BODY: True  # Backprop all the way!
 
-TRAIN:
-  # If we load the pre-trained weight from MSCOCO
-  IGNORE_LIST: ['roi_heads.box.predictor.cls_score.weight', 'roi_heads.box.predictor.cls_score.bias',
-   'roi_heads.box.predictor.bbox_pred.weight', 'roi_heads.box.predictor.bbox_pred.bias',
-   'roi_heads.mask.predictor.mask_fcn_logits.weight', 'roi_heads.mask.predictor.mask_fcn_logits.bias']
+#TRAIN:
+#  # If we load the pre-trained weight from MSCOCO
+#  IGNORE_LIST: ['roi_heads.box.predictor.cls_score.weight', 'roi_heads.box.predictor.cls_score.bias',
+#   'roi_heads.box.predictor.bbox_pred.weight', 'roi_heads.box.predictor.bbox_pred.bias',
+#   'roi_heads.mask.predictor.mask_fcn_logits.weight', 'roi_heads.mask.predictor.mask_fcn_logits.bias']
 TEST:
-  WRITE_TO_JSON: True
+  WRITE_TO_JSON: False
   IMS_PER_BATCH : 1
   SCORE_THRESH_FOR_TRUTH_DETECTION: 0.5
